Inicio del Footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p class="parrafo borde" id="p3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
               <img src="placeholder.png" alt="Angulo alt 2" id="img2">
       <footer class="borde">
-        <h2 class="titulo2">Contact Us</h2>
+        <h2 class="titulo2">Just a Footer</h2>
         <ul>
           <li><img src="#" alt="Twitter"> <a href="https://twitter.com/home">@TheraOfficial</a></li>
           <li><img src="#" alt="Facebook"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
