--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="mystyle.css">
     <meta charset="utf-8">
-    <title>Portal - About Us</title>
+    <title>Thera - About Us</title>
+    <meta name="description" content="Be a part of the new phone revolution, and join in a new era.">
+    <meta name="keywords" content="celular, smartphone, alta gama, high end, 2020, tablet, budget, low end, about">
   </head>
   <body>
     <header>
