--- a/index.html
+++ b/index.html
@@ -1,42 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="mystyle.css">
-    <meta charset="utf-8">
-    <title>Portal - Home</title>
-  </head>
-  <body>
-    <div id="gridx">
-      <header class="borde">
-        <img src="logo.png" alt="Logo">
-        <nav>
-          <ul>
-            <li class="IndHead"><a href="index.html">Home</a></li>
-            <li class="IndHead"><a href="products.html">Products</a></li>
-            <li class="IndHead"><a href="blog.html">Blog</a></li>
-            <li class="IndHead"><a href="about_us.html">About Us</a></li>
-            <li class="IndHead"><a href="contact_us.html">Contact Us</a></li>
-          </ul>
-        </nav>
-      </header>
-        <section id="Top" class="borde">
-          <h1 class="titulo1">Join the next generation in phone technology</h1>
-          <img src="placeholder.png" alt="Foto principal">
-        </section>
-              <img src="placeholder.png" alt="Angulo alt 1" id="img1">
-              <p class="parrafo borde" id="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
-              <p class="parrafo borde" id="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
-              <p class="parrafo borde" id="p3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
-              <img src="placeholder.png" alt="Angulo alt 2" id="img2">
-      <footer class="borde">
-        <h2 class="titulo2">Just a Footer</h2>
-        <ul>
-          <li><img src="#" alt="Twitter"> <a href="https://twitter.com/home">@TheraOfficial</a></li>
-          <li><img src="#" alt="Facebook"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
-          <li><img src="#" alt="Email"><a href="mailto:support@thera.com">support@thera.com</a></li>
-        </ul>
-      </footer>
+
+<head>
+  <meta charset="utf-8">
+  <title>Thera - Home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="css/mystyle.css" rel="stylesheet">
+  <meta name="description" content="Be a part of the new phone revolution, and join in a new era.">
+  <meta name="keywords" content="celular, smartphone, alta gama, high end, 2020, tablet, budget, low end">
+</head>
+
+<body>
+
+  <!--Modal del boton primario Learn More-->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Testing modal</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          This is just a testing extra modal
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+
+  <!--Barra de navegacion-->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Thera</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link navbar__enlace" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar__enlace" href="products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar__enlace" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar__enlace" href="about_us.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar__enlace" href="contact_us.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!--Titulo principal-->
+  <header class="header text-center masthead">
+    <div class="masthead-content">
+      <div class="container">
+        <h1 class="masthead-heading header__titulo">Join the next generation</h1>
+        <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
+        <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
+      </div>
+    </div>
+  </header>
+
+  <!--Primer bloque-->
+  <section class="section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid" src="img/01.jpg">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">The next gen Tech is here</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--Segundo Bloque-->
+  <section class="section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <img class="img-fluid" src="img/02.jpg">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h2 class="display-4">We welcome you to a new future<span class="badge badge-secondary">New</span></h2>
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo1">Show more</button>
+            <div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--Footer Sociales-->
+  <footer class="py-4 bg-black footer">
+    <div class="container">
+      <ul class="list-inline">
+        <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
+        <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
+        <li><img src="img/mail.svg" alt="Email" class="footer__image"><a href="mailto:support@thera.com">support@thera.com</a></li>
+      </ul>
+    </div>
+  </footer>
+
+  <!--Scripts-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
