--- a/products.html
+++ b/products.html
@@ -4,7 +4,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="mystyle.css">
     <meta charset="utf-8">
-    <title>Portal - Products</title>
+    <title>Thera - Products</title>
+    <meta name="description" content="Be a part of the new phone revolution, and join in a new era.">
+    <meta name="keywords" content="celular, smartphone, alta gama, high end, 2020, tablet, budget, low end, shop, buy">
   </head>
   <body>
     <header>
@@ -19,6 +21,8 @@
         </ul>
       </nav>
     </header>
+    <br>
+    <br>
     <main>
       <section>
         <h2 class="titulo2">Our Products</h2> 
@@ -26,6 +30,8 @@
           <img src="placeholder.png" alt="Angulo alt 1">
           <p class="parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
         </div>
+        <br>
+        <br>
         <div class=boxie>
           <p class="parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
           <img src="placeholder.png" alt="Angulo alt 2">
@@ -39,6 +45,12 @@
         <li><img src="#" alt="Facebook"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
         <li><img src="#" alt="Email"><a href="mailto:support@thera.com">support@thera.com</a></li>
       </ul>
+      <br>
+      <p class="parrafo">Language:</p>
+      <select name="Language">
+        <option value="E">English</option>
+        <option value="S">Spanish</option>
+      </select>
     </footer>
   </body>
 </html>
