--- a/about_us.html
+++ b/about_us.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="mystyle.css">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="css/mystyle.css" rel="stylesheet">
     <title>Thera - About Us</title>
     <meta name="description" content="Be a part of the new phone revolution, and join in a new era.">
     <meta name="keywords" content="celular, smartphone, alta gama, high end, 2020, tablet, budget, low end, about">
   </head>
+
   <body>
-    <header>
-      <nav>
-        <ul>
-          <img src="logo.png" alt="Logo">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="contact_us.html">Contact Us</a></li>
-        </ul>
-      </nav>
-    </header>
+    <!--Barra de navegacion-->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Thera</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link navbar__enlace" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__enlace" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__enlace" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__enlace" href="about_us.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar__enlace" href="contact_us.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
     <br>
     <br>
     <main>
@@ -52,5 +71,11 @@
         <option value="S">Spanish</option>
       </select>
     </footer>
+
+          <!--Scripts-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
   </body>
 </html>
