Added consistency for the footer for all pages

--- a/products.html
+++ b/products.html
@@ -55,20 +55,17 @@
         </div>
       </section>
     </main>
-    <footer>
-      <h2 class="titulo2">Contact Us</h2>
-      <ul>
-        <li><img src="#" alt="Twitter"> <a href="https://twitter.com/home">@TheraOfficial</a></li>
-        <li><img src="#" alt="Facebook"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
-        <li><img src="#" alt="Email"><a href="mailto:support@thera.com">support@thera.com</a></li>
+
+  <!--Footer Sociales-->
+  <footer class="py-4 bg-black footer">
+    <div class="container">
+      <ul class="list-inline">
+        <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
+        <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
+        <li><img src="img/mail.svg" alt="Email" class="footer__image"><a href="mailto:support@thera.com">support@thera.com</a></li>
       </ul>
-      <br>
-      <p class="parrafo">Language:</p>
-      <select name="Language">
-        <option value="E">English</option>
-        <option value="S">Spanish</option>
-      </select>
-    </footer>
+    </div>
+  </footer>
 
       <!--Scripts-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
