--- a/contact_us.html
+++ b/contact_us.html
@@ -11,6 +11,7 @@
   </head>
   
   <body>
+
         <!--Barra de navegacion-->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
@@ -40,49 +41,68 @@
     </div>
   </nav>
   
-    <main>
-      <section>
-        <form>
-          <fieldset>
-            <legend>Contact Information</legend>
-            <label for="Name">Name:</label>
-            <input type="text" id="Name" name="Name"> <br>
-            <label for="Surname">Surname:</label>
-            <input type="text" id="Surname" name="Surname"><br>
-            <label for="E-mail">E-mail:</label>
-            <input type="text" id="E-mail" name="E-mail"><br>
-            I have a: <select name="Product">
-              <option value="Phone">Phone</option>
-              <option value="Tablet">Tablet</option>
-              <option value="Both">Both</option>
-            </select>
-            <br>
-            <input type="radio" id="Consult" name="Type" value="consult"><label for="Consult">Consult</label>  
-            <input type="radio" id="Support" name="Type" value="support"><label for="Support">Support</label>
-            <br>
-            Other information: <br>
-            <textarea name="Topic" cols="30" rows="10">Main topic of contact.</textarea><br>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Clear">
-          </fieldset>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <h2 class="titulo2">Contact Us</h2>
-      <ul>
-        <li><img src="#" alt="Twitter"> <a href="https://twitter.com/home">@TheraOfficial</a></li>
-        <li><img src="#" alt="Facebook"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
-        <li><img src="#" alt="Email"><a href="mailto:support@thera.com">support@thera.com</a></li>
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid" src="img/01.jpg">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">The next gen Tech is here</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="p-5">
+    <form class="col-lg-6">
+      <legend>Contact Information</legend>
+      <div class="row">
+        <div class="form-group col">
+        <label for="Name">Name:</label>
+        <input type="text" id="Name" name="Name" class="form-control"></div>
+        <div class="form-group col">
+        <label for="Surname">Surname:</label>
+        <input type="text" id="Surname" name="Surname" class="form-control"></div>
+      </div>
+      <div class="form-group">
+      <label for="E-mail">E-mail:</label>
+      <input type="text" id="E-mail" name="E-mail" class="form-control"></div>
+      <div class="form-group"> I have a: <select name="Product">
+        <option value="Phone">Phone</option>
+        <option value="Tablet">Tablet</option>
+        <option value="Both">Both</option>
+      </select> </div>
+      <div class="form-check form-check-inline">
+      <input type="radio" id="Consult" name="Type" value="consult" class="form-check-input" checked><label for="Consult" class="form-check-label">Consult</label> 
+      </div> <div class="form-check form-check-inline">
+      <input type="radio" id="Support" name="Type" value="support" class="form-check-input"><label for="Support" class="form-check-label">Support</label>
+      </div>
+      <div class="form-group">
+      Other information:
+      <textarea name="Topic" cols="30" rows="10">Main topic of contact.</textarea><br>
+      <input type="submit" value="Submit">
+      <input type="reset" value="Clear">
+      </div>
+  </form>
+  </section>
+
+  <!--Footer Sociales-->
+  <footer class="py-4 bg-black footer">
+    <div class="container">
+      <ul class="list-inline">
+        <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
+        <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
+        <li><img src="img/mail.svg" alt="Email" class="footer__image"><a href="mailto:support@thera.com">support@thera.com</a></li>
       </ul>
-      <br>
-      <p class="parrafo">Language:</p>
-      <select name="Language">
-        <option value="E">English</option>
-        <option value="S">Spanish</option>
-      </select>
-    </footer>
-    
+    </div>
+  </footer>
+
           <!--Scripts-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
