--- a/blog.html
+++ b/blog.html
@@ -39,24 +39,56 @@
         </div>
       </div>
     </nav>
-    
-    <br>
-    <br>
-    <main>
-      <section>
-        <h2 class="titulo2">Most Recent Article</h2>
-        <div class=boxie>
-          <img src="placeholder.png" alt="Angulo alt 1">
-          <p class="parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
+  
+  <!--Titulo principal-->
+  <header class="header text-center masthead">
+    <div class="masthead-content">
+      <div class="container">
+        <h1 class="masthead-heading header__titulo">Join the next generation</h1>
+        <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
+        <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
+      </div>
+    </div>
+  </header>
+
+  <!--Primer bloque-->
+  <section class="section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid" src="img/01.jpg">
+          </div>
         </div>
-        <br>
-        <h2 class="titulo2" >Oldest Article</h2>
-        <div class=boxie>
-          <img src="placeholder.png" alt="Angulo alt 2">
-          <p class="parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum est ab nam aperiam incidunt assumenda magnam vitae, necessitatibus earum nisi quas dolore deleniti eos itaque nemo illo quidem veritatis.</p>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">The next gen Tech is here</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+          </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
+  </section>
+
+  <!--Segundo Bloque-->
+  <section class="section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <img class="img-fluid" src="img/02.jpg">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h2 class="display-4">We welcome you to a new future</h2>
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo1">Show more</button>
+            <div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!--Footer Sociales-->
   <footer class="py-4 bg-black footer">
