--- a/contact_us.html
+++ b/contact_us.html
@@ -68,16 +68,16 @@
           <div class="form-row"> <!--Nombre-->
             <div class="form-group col">
               <label for="Name">Name:</label>
-              <input type="text" id="Name" name="Name" class="form-control">
+              <input type="text" id="Name" name="Name" class="form-control" placeholder="Name">
             </div>
             <div class="form-group col"> <!--Apellido-->
               <label for="Surname">Surname:</label>
-              <input type="text" id="Surname" name="Surname" class="form-control">
+              <input type="text" id="Surname" name="Surname" class="form-control" placeholder="Surname"">
             </div>
           </div>
           <div class="form-group"> <!--Email-->
             <label for="E-mail">E-mail:</label>
-            <input type="text" id="E-mail" name="E-mail" class="form-control">
+            <input type="text" id="E-mail" name="E-mail" class="form-control" placeholder="E-mail">
           </div>
           <div class="form-group"> Device: <!--Dispositivo-->
             <select name="Product" class="form-control">
@@ -96,7 +96,7 @@
           </div>
           <div class="form-group"> <!--Caja de Texto-->
             <label for="BloqueTexto">Other information:</label>
-            <textarea name="Topic" cols="30" rows="10" id="BloqueTexto" class="form-control" placeholder="Main Topic"></textarea>
+            <textarea name="Topic" cols="30" rows="10" id="BloqueTexto" class="form-control" placeholder="Topic"></textarea>
           </div>
           <input type="submit" value="Submit" class="btn btn-primary">
           <input type="reset" value="Clear" class="btn btn-outline-danger">
@@ -108,6 +108,7 @@
   <!--Footer Sociales-->
   <footer class="py-4 bg-black footer">
     <div class="container">
+      <h3 class="text-light">Our Socials</h3>
       <ul class="list-inline">
         <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
         <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
