--- a/blog.html
+++ b/blog.html
@@ -93,6 +93,7 @@
   <!--Footer Sociales-->
   <footer class="py-4 bg-black footer">
     <div class="container">
+      <h3 class="text-light">Our Socials</h3>
       <ul class="list-inline">
         <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
         <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
