--- a/products.html
+++ b/products.html
@@ -73,18 +73,12 @@
   <!--Segundo Bloque-->
   <section class="section">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="p-5">
-            <img class="img-fluid" src="img/02.jpg">
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="p-5">
-            <h2 class="display-4">We welcome you to a new future</h2>
-            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo1">Show more</button>
-            <div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</div>
-          </div>
+      <div class="card p-2" style="width: 18rem;">
+        <img class="card-img-top" src="img/01.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
@@ -93,6 +87,7 @@
   <!--Footer Sociales-->
   <footer class="py-4 bg-black footer">
     <div class="container">
+      <h3 class="text-light">Our Socials</h3>
       <ul class="list-inline">
         <li><img src="img/twt.svg" alt="Twitter" class="footer__image"><a href="https://twitter.com/home" title="Test" data-toggle="popover" data-placement="left" data-content="Certainly a popover test">@TheraOfficial</a></li>
         <li><img src="img/fbk.svg" alt="Facebook" class="footer__image"> <a href="https://www.facebook.com/">/Thera_Official</a></li>
