--- a/about_us.html
+++ b/about_us.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link navbar__enlace" href="index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -29,7 +29,7 @@
             <li class="nav-item">
               <a class="nav-link navbar__enlace" href="blog.html">Blog</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link navbar__enlace" href="about_us.html">About Us</a>
             </li>
             <li class="nav-item">
@@ -46,7 +46,6 @@
       <div class="container">
         <h1 class="masthead-heading header__titulo">Join the next generation</h1>
         <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
-        <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
       </div>
     </div>
   </header>
@@ -81,9 +80,8 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We welcome you to a new future</h2>
-            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo1">Show more</button>
-            <div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</div>
+            <h2 class="display-4">We welcome you to the future</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
           </div>
         </div>
       </div>
