--- a/products.html
+++ b/products.html
@@ -20,10 +20,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link navbar__enlace" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link navbar__enlace" href="products.html">Products</a>
           </li>
           <li class="nav-item">
@@ -44,9 +44,8 @@
   <header class="header text-center masthead">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading header__titulo">Join the next generation</h1>
-        <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
-        <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
+        <h1 class="masthead-heading header__titulo">An ever growing variety</h1>
+        <h2 class="masthead-subheading header__subtitulo">of smartphones</h2>
       </div>
     </div>
   </header>
@@ -62,8 +61,9 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">The next gen Tech is here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">The best of the best</h2>
+            <p>The ultimate smart device, bringing the best components to bring you the last device you will ever need</p>
+            <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Check specs</button>
           </div>
         </div>
       </div>
@@ -73,16 +73,42 @@
   <!--Segundo Bloque-->
   <section class="section">
     <div class="container">
-      <div class="card p-2" style="width: 18rem;">
-        <img class="card-img-top" src="img/01.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <img class="img-fluid" src="img/03.jpg">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h2 class="display-4">For the gamer on a budget</h2>
+            <p>For when you want to maximize your gaming performance while not going all out on the price.</p>
+            <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Check specs</button>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
+    <!--Tercer bloque-->
+    <section class="section">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid" src="img/04.jpg">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4">Performance on a budget</h2>
+              <p>The phone for the casual user, you still want the best within a reasonable price</p>
+              <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Check specs</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!--Footer Sociales-->
   <footer class="py-4 bg-black footer">
