--- a/index.html
+++ b/index.html
@@ -12,24 +12,6 @@
 
 <body>
 
-  <!--Modal del boton primario Learn More-->
-  <div class="modal" id="myModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Testing modal</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-          This is just a testing extra modal
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!--Barra de navegacion-->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
@@ -65,7 +47,6 @@
       <div class="container">
         <h1 class="masthead-heading header__titulo">Join the next generation</h1>
         <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
-        <button type="button" class="btn btn-primary btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
       </div>
     </div>
   </header>
@@ -82,7 +63,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">The next gen Tech is here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <p>Years of engineering brought us to a new peak in smartphone technology, bringing the best of all aspects to turn out the ultimate smartphone.</p>
           </div>
         </div>
       </div>
@@ -100,9 +81,8 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We welcome you to a new future<span class="badge badge-secondary">New</span></h2>
-            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo1">Show more</button>
-            <div id="demo1" class="collapse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</div>
+            <h2 class="display-4">We welcome you to a new future</h2>
+            <p>Join early to the family of tech that will redefine what a smartphone is capable of, and the future of phones as a whole.</p>
           </div>
         </div>
       </div>
