--- a/contact_us.html
+++ b/contact_us.html
@@ -40,30 +40,22 @@
       </div>
     </div>
   </nav>
-  
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
-            <img class="img-fluid" src="img/01.jpg">
-          </div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">The next gen Tech is here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-          </div>
-        </div>
+
+
+  <!--Titulo principal-->
+  <header class="header text-center masthead">
+    <div class="masthead-content">
+      <div class="container">
+        <h1>For any inquiries, please fill the contact form below</h1>
       </div>
     </div>
-  </section>
+  </header>
 
   <!--Forma de Contacto-->
   <section class="p-5">
     <div class="container">
       <div class="row">
-        <form class="col-sm-10 offset-sm-1 justify-content-center">
+        <form class="col-sm-10 offset-sm-1 justify-content-center bg-light">
           <legend>Contact Information</legend>
           <div class="form-row"> <!--Nombre-->
             <div class="form-group col">
