Blog and animations done

--- a/about_us.html
+++ b/about_us.html
@@ -44,8 +44,8 @@
   <header class="header text-center masthead">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading header__titulo">Join the next generation</h1>
-        <h2 class="masthead-subheading header__subtitulo">in phone technology</h2>
+        <h1 class="masthead-heading header__titulo">We were just like you</h1>
+        <h2 class="masthead-subheading header__subtitulo">Hoping for the future</h2>
       </div>
     </div>
   </header>
@@ -56,13 +56,13 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid" src="img/01.jpg">
+            <img class="img-fluid" src="img/cpu.jpg">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">The next gen Tech is here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Our Mission</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem.</p>
           </div>
         </div>
       </div>
@@ -75,13 +75,13 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid" src="img/02.jpg">
+            <img class="img-fluid" src="img/04.jpg">
           </div>
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We welcome you to the future</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Our Vision</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem.</p>
           </div>
         </div>
       </div>
