Adding Alts to imgs

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="card col-lg-5 m-3" data-aos="fade-right">
-          <img class="card-img-top" src="img/01.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/01.jpg" alt="Ultimate Phone Card">
           <div class="card-body">
             <h5 class="card-title">Our greatest device</h5>
             <p class="card-text">It all lead up to this moment, the ultimate smartphone is finally realized.</p>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="card col-lg-5 m-3" data-aos="fade-left">
-          <img class="card-img-top" src="img/cpu.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/cpu.jpg" alt="CPU Card">
           <div class="card-body">
             <h5 class="card-title">Let's talk about SoCs</h5>
             <p class="card-text">What drives the portable devices of today, and what might drive the PCs of tomorrow</p>
@@ -75,7 +75,7 @@
     <!--Segunda Fila-->
       <div class="row justify-content-center">
         <div class="card col-lg-5 m-3" data-aos="fade-right">
-          <img class="card-img-top" src="img/03.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/03.jpg" alt="Gaming Phone Card">
           <div class="card-body">
             <h5 class="card-title">Gamers rejoice</h5>
             <p class="card-text">Our latest product focuses on the best performance possible while gaming, but this comes at a cost...</p>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="card col-lg-5 m-3" data-aos="fade-left">
-          <img class="card-img-top" src="img/cpu.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/cpu.jpg" alt="CPU Card">
           <div class="card-body">
             <h5 class="card-title">Problems of the present, hopes for the future</h5>
             <p class="card-text">The latest global issue brought us all to a new present, with less human contact, and more internet interactions...</p>
@@ -94,7 +94,7 @@
   <!--Tercera Fila-->
       <div class="row justify-content-center">
         <div class="card col-lg-5 m-3" data-aos="fade-right">
-          <img class="card-img-top" src="img/cpu.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/cpu.jpg" alt="CPU Card">
           <div class="card-body">
             <h5 class="card-title">The true start of Thera</h5>
             <p class="card-text">Lets talk about our objectives for the future, and why we decided on this image for the generic card header...</p>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="card col-lg-5 m-3" data-aos="fade-left">
-          <img class="card-img-top" src="img/04.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/04.jpg" alt="First Phone Card">
           <div class="card-body">
             <h5 class="card-title">Absolute efficiency</h5>
             <p class="card-text">Our first device squeezes the maximum performance and features amount as possible within a limited budget, this is...</p>
