--- a/about_us.html
+++ b/about_us.html
@@ -56,7 +56,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid" src="img/cpu.jpg">
+            <img class="img-fluid" src="img/cpu.jpg" alt="CPU Image">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -75,7 +75,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid" src="img/04.jpg">
+            <img class="img-fluid" src="img/04.jpg" alt="The First Phone">
           </div>
         </div>
         <div class="col-lg-6">
