--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid" src="img/01.jpg">
+            <img class="img-fluid" src="img/01.jpg" alt="Ultimate Phone">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -76,7 +76,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid" src="img/02.jpg">
+            <img class="img-fluid" src="img/02.jpg" alt="Ultimate Phone Variant">
           </div>
         </div>
         <div class="col-lg-6">
