--- a/products.html
+++ b/products.html
@@ -239,7 +239,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid" src="img/01.jpg">
+            <img class="img-fluid" src="img/01.jpg" alt="Ultimate Phone">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -259,7 +259,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid" src="img/03.jpg">
+            <img class="img-fluid" src="img/03.jpg" alt="Gaming Phone">
           </div>
         </div>
         <div class="col-lg-6">
@@ -279,7 +279,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid" src="img/04.jpg">
+              <img class="img-fluid" src="img/04.jpg" alt="Cheaper Phone">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
