--- a/about_us.html
+++ b/about_us.html
@@ -14,7 +14,7 @@
     <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Thera</a>
+        <a class="navbar-brand" href="index.html">Thera</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
