--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Thera</a>
+        <a class="navbar-brand" href="index.html">Thera</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,7 +46,7 @@
     <div class="masthead-content">
       <div class="container">
         <h1 class="masthead-heading header__titulo">Check the latest news</h1>
-        <h2 class="masthead-subheading header__subtitulo">on our progress.</h2>
+        <h2 class="masthead-subheading header__subtitulo">on our progress</h2>
       </div>
     </div>
   </header>
