--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Thera - Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="css/mystyle.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <meta name="description" content="Be a part of the new phone revolution, and join in a new era.">
   <meta name="keywords" content="celular, smartphone, alta gama, high end, 2020, tablet, budget, low end">
 </head>
@@ -15,7 +16,7 @@
   <!--Barra de navegacion-->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Thera</a>
+      <a class="navbar-brand" href="index.html">Thera</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,7 +55,7 @@
   <!--Primer bloque-->
   <section class="section">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center" data-aos="fade-right">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
             <img class="img-fluid" src="img/01.jpg" alt="Ultimate Phone">
@@ -73,7 +74,7 @@
   <!--Segundo Bloque-->
   <section class="section">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center" data-aos="fade-left">
         <div class="col-lg-6">
           <div class="p-5">
             <img class="img-fluid" src="img/02.jpg" alt="Ultimate Phone Variant">
@@ -105,7 +106,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
